appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_001c_invite_flow_student_parent_approval_disabled_test"

onFlowComplete:
  - runScript:
      file: "scripts/teardown.js"

---

- runFlow: "subflows/school_admin_login_flow.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn: "People"

#Admin create class and add teacher to class
- runFlow:
    file: "subflows/user_add_class.yaml"
    env:
      CLASSNAME: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- tapOn: "Add Teacher"
- tapOn: "Add person"
- assertVisible:
    id: "app_title"
    text: "Add person"
- tapOn: "First names*"
- inputText: "TeacherA"
- tapOn: "Last name*"
- inputText: "User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Save"
- tapOn: "TeacherA User"
- tapOn: "Create account"
- assertVisible: "teacherauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Save"
- assertVisible: "Manage account"

# Invite Student as new person - Approve Required Off
- tapOn: "People"
- tapOn:
    id: "ExpandableFab"   #  +Person button
- tapOn:
    text: "Invite person"
    index: 1
- assertVisible:
    id: "app_title"
    text: "Invite person"
- tapOn:
    id: "role"
- tapOn:
    text: "Student"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.studentApproveOff = maestro.copiedText}

# Invite Parent as new person - Approve Required Off
- tapOn:
    id: "role"
- tapOn:
    text: "Parent"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.parentApproveOff = maestro.copiedText}
- back

#Teacher open class and invite students to class
- tapOn: "Classes"
- tapOn: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"

# Invite Student as new student to TestClass - Approve Required Off
- tapOn: "Add Student"
- tapOn: "Invite person"
- assertVisible:
    id: "app_title"
    text: "Invite person"
- tapOn: "Invite students directly"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.studentClassApproveOff = maestro.copiedText}

# Invite Student to TestClass via Parent - Approve Required Off
- tapOn: "Invite via parents"
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.parentClassApproveOff = maestro.copiedText}


#Student A sign-up via invite code as new person - Approve Required Off
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}
- tapOn: "Get Started"
- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- inputText: ${output.studentApproveOff}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Your profile"
- tapOn: "Your name*"
- inputText: "StudentA User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.pastYearDateC}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: "studentauser"  #username
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "test123"
- tapOn: "Sign-up"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"


#Parent A sign-up via invite code as new person - Approve Required Off
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}
- tapOn: "Get Started"
- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- inputText: ${output.parentApproveOff}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Parent"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Terms and conditions"
- tapOn: "Accept"
- assertVisible:
    id: "app_title"
    text: "Your profile"
- tapOn: "Your name*"
- inputText: "ParentA User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.pastYearDateC}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: "parentauser"  #username
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "test123"
- tapOn: "Sign-up"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"


# Student B user joining using invite code - Approve Required Off
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}
- tapOn: "Get Started"
- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- inputText: ${output.studentClassApproveOff}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "Class name"
- assertVisible: "TestClass"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Your profile"
- tapOn: "Your name*"
- inputText: "StudentB User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.pastYearDateP}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: "studentbuser"
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "test123"
- tapOn: "Sign-up"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn: "Classes"
- assertVisible: "TestClass"


# Parent B joins child user to the class using invite link - Approve required Off
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${output.SCHOOL_URL + "respect_school_link/AcceptInvite?inviteCode=" + output.parentClassApproveOff}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Create new account"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "Class name"
- assertVisible: "TestClass"
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Terms and conditions"
- tapOn: "Accept"
- assertVisible:
    id: "app_title"
    text: "Your profile"
- tapOn: "Your name*"
- inputText: "ParentB User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.pastYearDateP}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- extendedWaitUntil:
    visible: "parentbuser" #username
    timeout: 10000
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "test123"
- tapOn: "Sign-up"
- tapOn: "Child's name*"
- inputText: "ChildA User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Child's date of birth*"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.pastYearDateC}
- tapOn: "Done"
- runFlow:
    when:
      visible: "Done"
    commands:
      - tapOn: "Done"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn: "Classes"
- assertVisible: "TestClass"

# TeacherA user login - Approves People and Class invites
# TeacherA user in people page validating and approving join request
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn: "People"
- assertVisible: "StudentA User"
- assertVisible: "StudentB User"
- assertVisible: "ParentA User"
- assertVisible: "ParentB User"
- assertVisible: "ChildA User"
- assertNotVisible: "Pending request to join.*"

#Teacher User open class
- tapOn: "Classes"
- tapOn: "TestClass"
- runFlow:
    when:
      notVisible: "StudentB User"
    commands:
      - tapOn: "People"
      - assertVisible: "StudentB User"
      - tapOn: "Classes"
      - tapOn: "TestClass"
- assertVisible: "StudentB User"
- assertVisible: "ChildA User"
- assertNotVisible: "ParentB User"
- assertNotVisible: "Pending request to join.*"


